@@ -1,6 +1,8 @@
 setAs("CHMfactor", "sparseMatrix",
       function(from) .Call(CHMfactor_to_sparse, from))
 
+setAs("CHMfactor", "Matrix", function(from) as(from, "sparseMatrix"))
+
 setMethod("image", "CHMfactor",
           function(x, ...) {
               x <- as(as(x, "sparseMatrix"), "dgTMatrix")
